# sudoku-rs

./: .travis.yml  Cargo.toml  LICENSE.md  README.md  azure-pipelines.yml
.github/: dependabot.yml
.github/workflows/: rust.yml
benches/: dfs_solve.rs
src/: bitset.rs  board.rs  error.rs  grade.rs  lib.rs  solver.rs
