[package]
name = "sudoku"
version = "0.1.0"
authors = ["laxect <me@gyara.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
superslice = "1.0.0"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "dfs_solve"
harness = false