[package]
name = "sudoku_rs"
version = "0.1.0"
authors = ["laxect <me@gyara.moe>"]
edition = "2018"
description = "a package for sudoku in pure rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "dfs_solve"
harness = false