[package]
name = "sudoku_rs"
version = "0.2.3"
authors = ["laxect <me@gyara.moe>"]
edition = "2018"
description = "a package for sudoku in pure rust"
repository = "https://github.com/laxect/sudoku-rs"
license = "MIT"
readme = "README.md"

[lib]
bench = false

[dependencies]

[dev-dependencies]
criterion = "0.2.11"

[[bench]]
name = "dfs_solve"
harness = false
